add_subdirectory(job)

art_make( 
	  LIB_LIBRARIES
			larevt_CalibrationDBI_IOVData
			ubevt_Utilities
			larcorealg_Geometry
                        larcore_Geometry_Geometry_service
                        larsim_Simulation lardataobj_Simulation
                        lardataobj_RawData
                        lardataobj_RecoBase
                        lardataobj_AnalysisBase
                        lardata_ArtDataHelper
                        lardata_Utilities
                        larreco_RecoAlg_ClusterRecoUtil
                        larreco_RecoAlg
                        larreco_ClusterFinder
                        larreco_Calorimetry
                        PANDORASDK
                        PANDORAMONITORING
                        nusimdata::SimulationBase
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        fhiclcpp::fhiclcpp
                        cetlib::cetlib
                        cetlib_except::cetlib_except
                        Boost::filesystem
                        ROOT::Geom
	  TOOL_LIBRARIES
			larevt_CalibrationDBI_IOVData
			ubevt_Utilities	
			larcorealg_Geometry
                        larcore_Geometry_Geometry_service
                        larsim_Simulation lardataobj_Simulation
                        lardataobj_RawData
                        lardataobj_RecoBase
                        lardataobj_AnalysisBase
                        lardata_ArtDataHelper
                        lardata_Utilities
                        larreco_RecoAlg_ClusterRecoUtil
                        larreco_RecoAlg
                        larreco_ClusterFinder
                        larreco_Calorimetry
                        PANDORASDK
                        PANDORAMONITORING
                        nusimdata::SimulationBase
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        fhiclcpp::fhiclcpp
                        cetlib::cetlib
                        cetlib_except::cetlib_except
                        Boost::filesystem
                        ROOT::Geom
                        ubreco_SelectionTool_OpT0FinderBase
                        ubreco_SelectionTool_OpT0FinderAlgorithms

     MODULE_LIBRARIES 
			larevt_CalibrationDBI_IOVData
			#larpandora_LArPandoraEventBuilding
			art::Framework_Core
			art::Framework_Services_Registry
			art::Framework_Principal
			art::Persistency_Provenance
			art::Framework_Core
			larcorealg_Geometry	
			lardataobj_RecoBase
		   	larcorealg_Geometry		
			#larpandora_LArPandoraObjects
                        #LArPandoraContent
                        #larpandoraobj
            		PANDORASDK
			larcore_Geometry_Geometry_service	
			art::Utilities
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        cetlib::cetlib
                        cetlib_except::cetlib_except
		   	art::Framework_Services_Registry
                        ubreco_SelectionTool_OpT0FinderBase
                        ubreco_SelectionTool_OpT0FinderAlgorithms
)

install_headers()
install_fhicl()
install_source()
